# ekk-runtime

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  LICENSE  LICENSE-CC-BY-SA-4.0  LICENSE-MIT  README.md
.github/workflows/: ci.yml  semgrep.yml
docs/: EK3_ROJ_MAPPING.md  KEY_COMPONENTS.md  L4V_PARSEABILITY_PLAN.md  MILESTONE_RUNTIME_HARDENING.md  README.md  SECURITY.md  SEL4_REVIEW.md  VERIFICATION_PLAN.md
docs/isabelle/: EkkConsensus.thy  EkkHeartbeat.thy  EkkTypes.thy  ROOT  ekk_consensus_verif.c  ekk_heartbeat_verif.c  ekk_verif.c
examples/: basic.c  ek3_rack.c  multi_module.c
include/ekk/: ekk.h  ekk_consensus.h  ekk_field.h  ekk_hal.h  ekk_heartbeat.h  ekk_module.h  ekk_stdint.h  ekk_topology.h  ekk_types.h
scripts/: check-verification-parse.sh
src/: ekk_consensus.c  ekk_field.c  ekk_heartbeat.c  ekk_init.c  ekk_module.c  ekk_topology.c  ekk_types.c
src/hal/: ekk_hal_posix.c
tests/: test_main.c
